--- a/src/components/PropertyListingSidebar/PropertySidebar.scss
+++ b/src/components/PropertyListingSidebar/PropertySidebar.scss
@@ -3,6 +3,7 @@
 .property-side-bar {
 	min-width: 275px;
 	padding-bottom: 25px;
+	background-color: white;
 }
 
 /*//////////////////////////////////////////////////*/
